--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robofriends",
+  "homepage": "https://abegpatel.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [ 
