--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://<myusername>.github.io/robofriends",
+  "homepage": "https://abegpatel.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
